remove overflow hidden (fixes #56, closes #57)

--- a/src/cards.css
+++ b/src/cards.css
@@ -12,7 +12,6 @@
 
 .card {
   flex-direction: column;
-  overflow: hidden;
   flex: 0 1 calc(50% - 0.5rem);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
